# c2vsim_fg_stream_transects

./: .buildinfo  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  a00_introduction.html  a01_prepare_data.html  a02_butte_creek.html  a02_results.html  a06_bibliography.html  a06_discussion.html  a07_conclusions.html  a08_bibliography.html  content.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: a00_introduction.ipynb  a01_prepare_data.ipynb  a02_butte_creek.ipynb  a02_results.ipynb  a03_red_bluff_to_chico.ipynb  a03_sacramento_to_yuba.ipynb  a04_chico_to_yuba.ipynb  a05_red_bluff_to_chico.ipynb  a05_sacramento_to_yuba.ipynb  a06_bibliography.ipynb  a06_discussion.ipynb  a07_conclusions.ipynb  a08_bibliography.ipynb  intro.md
c2vsim_fg_stream_transects/: GRA_2025.bib  _config.yml  _toc.yml  a00_introduction.py  a01_prepare_data.py  a02_butte_creek.py  a02_results.py  a03_red_bluff_to_chico.py  a03_sacramento_to_yuba.py  a04_chico_to_yuba.py  a05_red_bluff_to_chico.py  a05_sacramento_to_yuba.py  a06_discussion.py  a07_conclusions.py  a08_bibliography.py  intro.md
data/: Butte_Creek.dbf  Butte_Creek.shp  Butte_Creek.shx  Chico.dbf  Chico.qmd  Chico.shp  Chico.shx  bathymetry_grid.dbf  bathymetry_grid.shp  bathymetry_grid.shx  butte_creek_gwallout_stream_nodes.csv  butte_creek_lithology.csv  butte_creek_stream_nodes.csv  butte_creek_stream_nodes.dbf  butte_creek_stream_nodes.shp  butte_creek_stream_nodes.shx  california.dbf  california.shx  red_bluff.dbf  (+30 more)
(+18 files in other folders)
