[project]
name = "c2vsim-fg-stream-transects"
version = "0.1.0"
description = ""
authors = [
    {name = "Jose Diaz"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ghp-import (>=2.1.0,<3.0.0)",
    "jupytext (>=1.17.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
